# bods-aml-ai

./: .gitignore  README.md  pyproject.toml  sample_input.json
src/bods_aml_ai/: __init__.py  cli.py  config.py  pipeline.py
src/bods_aml_ai/ingestion/: bods_reader.py  models.py
src/bods_aml_ai/transform/: account_party_links.py  parties.py  supplementary.py
src/bods_aml_ai/utils/: countries.py  dates.py
tests/: conftest.py  test_account_party_links.py  test_bods_fixtures_conformance.py  test_ingestion.py  test_parties.py  test_pipeline.py  test_supplementary.py
